--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>木間塚写真館</title>
+		<title>トモヱ画廊</title>
 	</head>
 	<body>
 	<div style="text-align:center">
-	<h1>木間塚写真館</h1>
+	<h1>トモヱ画廊</h1>
 	<h3>旅先で撮ってきた写真のいくつかを公開します</h3></div>
 		<center><table border=1>
 			<tr>
