--- a/index.html
+++ b/index.html
@@ -1,58 +1,119 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<title>トモヱ画廊</title>
-	</head>
-	<body>
-	<div style="text-align:center">
-	<h1>トモヱ画廊</h1>
-	<h3>旅先で撮ってきた写真のいくつかを公開します</h3></div>
-		<center><table border=1>
-			<tr>
-				<th>写真</th>
-				<th>説明</th>
-			</tr>
-			<tr>
-				<td><img src="rail.jpg" width="330" height="256">
-				</td>
-				<td>モノレールの線路</td>
-			</tr>
-			<tr>
-				<td><img src="kamo.jpg" width="330" height="256">
-				</td>
-				<td>沖縄のカモ(?)</td>
-			</tr>
-			<tr>
-				<td><img src="path.jpg" width="330" height="256">
-				</td>
-				<td>小径</td>
-			</tr>
-			<tr>
-				<td><img src="berry.jpg" width="330" height="256">
-				</td>
-				<td>リュウキュウイチゴ</td>
-			</tr>
-			<tr>
-				<td><img src="syuri.jpg" width="330" height="256">
-				</td>
-				<td>首里城</td>
-			</tr>
-			<tr>
-				<td><img src="tree.jpg" width="330" height="256">
-				</td>
-				<td>神々しい木</td>
-			</tr>
-			<tr>
-				<td><img src="neko.jpg" width="330" height="256">
-				</td>
-				<td>バーにいた猫</td>
-			</tr>
-			<tr>
-				<td><img src="sake.jpg" width="330" height="256">
-				</td>
-				<td>カンプノウ・ボム<br>
-				レッドブル＋ラム酒</td>
-			</tr>
-		</table></center>
-	</body>
+<html lang="ja">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewpoint" content="width=device-width, initial-scale=1,
+	shrink-to-fit=no">
+    <title>トモヱ画廊</title>
+    <link rel="stylesheet" href="./css/bootstrap.min.css" />
+
+    <script src="./js/jquery-3.4.1.js"></script>
+    <script src="./js/popper.min.js"></script>
+    <script src="./js/bootstrap.min.js"></script>
+    <script>
+        $(function () {
+            $('#news-main').scrollspy({ offset: $(window).height() / 2 });
+        });
+    </script>
+    <style>
+        span.font1 {
+            font-family: "ＭＳ Ｐ明朝";
+        }
+
+        #news-menu {
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            width: 8rem;
+            z-index: 1;
+            background-color: #f6f6f6;
+        }
+
+        #news-main {
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            width: 100%;
+            padding-left: 8.5rem;
+            overflow-y: scroll;
+        }
+    </style>
+
+</head>
+
+<body>
+    <div class="container">
+        <div class="row">
+            <h1><span class="font1">トモヱ画廊</span></h1>
+        </div>
+        <div class="row">
+            <div class="col-md-4 py-3 bg-dark text-info text-center">HOME</div>
+            <div class="col-md-4 py-3 bg-dark text-info text-center">
+                <a href="./aboutus.html" role="button">
+                    ABOUTUS
+                </a>
+            </div>
+            <div class="col-md-4 py-3 bg-dark text-info text-center">
+                <a href="./library.html" role="button">
+                    LIBRARY
+                </a>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-6">
+                <br>
+                <br>
+                <br>
+                <h2>Welcome!!!</h2><br>
+                東京都墨田区を拠点に活動している<br>
+                浅上 巴のHPです。
+            </div>
+            <div class="col-sm-6">
+                <br>
+                <div class="carousel slide" data-ride="carousel" data-interval="5000">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img class="d-block w-100" src="./tenran.jpg">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="./berry.jpg">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="./neko.jpg">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="./syuri.jpg">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="./path.jpg">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <br>
+        <br>
+        <div class="row">
+            <div class="col-sm-12">
+                <h4>NEWS</h4>
+            </div>
+
+            <div class="col-sm-12">
+                <div style="height:10rem;overflow:auto;border:1px solid #aaa;padding:10px;">
+                    <div id="news-main">
+                        <h3 id="section-1">2019.05.23</h3> 
+                        <small class="text-danger">NEW!</small>
+                        <p style="height:100">HOMEにNEWS欄を作成しました。(これ)</p>
+                        <small class="text-danger">NEW!</small>
+                        <p style="height:100">LIBRARYを作成しました。</p>
+                        <h3 id="section-2">2019.05.22</h3>
+                        <p style="height:100">当ホームページを作成しました。</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</body>
 </html>
