--- a/library.html
+++ b/library.html
@@ -49,7 +49,7 @@
         </div>
         <div class="row">
             <div class="col-md-4 py-3 bg-dark text-info text-center">
-                <a href="./index3.html" role="button">
+                <a href="./index.html" role="button">
                     HOME
                 </a>
             </div>
