--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <div class="carousel slide" data-ride="carousel" data-interval="5000">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img class="d-block w-100" src="./tenran.jpg">
+                            <img class="d-block w-100" src="./tenran.JPG">
                         </div>
                         <div class="carousel-item">
                             <img class="d-block w-100" src="./berry.jpg">
