--- a/library.html
+++ b/library.html
@@ -103,13 +103,13 @@
         <br>
         <div class="row">
             <div class="col-sm-3">
-                <img class="d-block w-100" src="./fumikiri.jpg">
+                <img class="d-block w-100" src="./fumikiri.JPG">
             </div>
             <div class="col-sm-3">
                 <img class="d-block w-100" src="./hasuen.jpg">
             </div>
             <div class="col-sm-3">
-                <img class="d-block w-100" src="./hop.jpg">
+                <img class="d-block w-100" src="./hop.JPG">
             </div>
         </div>
         <br>
