--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             overflow-y: scroll;
         }
     </style>
-
+    <link rel="shortcut icon" href="./fav.gif" type ="image/gif">
 </head>
 
 <body>
