--- a/aboutus.html
+++ b/aboutus.html
@@ -17,6 +17,7 @@
                 font-family:"ＭＳ Ｐ明朝";
             }
         </style> 
+    <link rel="shortcut icon" href="./fav.gif" type ="image/gif">
 </head>
 
 <body>
