--- a/library.html
+++ b/library.html
@@ -66,6 +66,85 @@
                 <br>
                 <br>
                 <br>
+                <h2>Kamakura</h2><br>
+                2019.06.01<br>
+                <br>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-3">
+                <img class="d-block w-100" src="./ajisai_rail.JPG">
+            </div>
+            <div class="col-sm-3">
+                <img class="d-block w-100" src="./hanaya2.JPG">
+            </div>
+            <div class="col-sm-3">
+                <img class="d-block w-100" src="./hanaya4.JPG">
+            </div>
+            <div class="col-sm-3">
+                <img class="d-block w-100" src="./hanaya5.JPG">
+            </div>
+        </div>
+        <br>
+        <div class="row">
+            <div class="col-sm-3">
+                <img class="d-block w-100" src="./hase3.JPG">
+            </div>
+            <div class="col-sm-3">
+                <img class="d-block w-100" src="./hase4.JPG">
+            </div>
+            <div class="col-sm-3">
+                <img class="d-block w-100" src="./hase5.JPG">
+            </div>
+            <div class="col-sm-3">
+                <img class="d-block w-100" src="./hase2.JPG">
+            </div>
+        </div>
+        <br>
+        <div class="row">
+            <div class="col-sm-3">
+                <img class="d-block w-100" src="./kamakura.JPG">
+            </div>
+            <div class="col-sm-3">
+                <img class="d-block w-100" src="./cha.JPG">
+            </div>
+            <div class="col-sm-3">
+                <img class="d-block w-100" src="./ryukou.JPG">
+            </div>
+            <div class="col-sm-3">
+                <img class="d-block w-100" src="./ryukou3.JPG">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-3">
+                <img class="d-block w-100" src="./rail_shrine.JPG">
+            </div>
+            <div class="col-sm-3">
+                <img class="d-block w-100" src="./train_shrine.JPG">
+            </div>
+            <div class="col-sm-3">
+                <img class="d-block w-100" src="./kingyo.JPG">
+            </div>
+            <div class="col-sm-3">
+                <img class="d-block w-100" src="./kingyo5.JPG">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-3">
+                <img class="d-block w-100" src="./kingyo4.JPG">
+            </div>
+            <div class="col-sm-3">
+                <img class="d-block w-100" src="./kingyo2.JPG">
+            </div>
+        </div>
+        <br>
+        <br>
+
+        <div class="row">
+            <div class="col-sm-12">
+                <br>
+                <br>
+                <br>
                 <h2>Chichibu, Saitama</h2><br>
                 2019.05.25<br>
                 <br>
