--- a/index.html
+++ b/index.html
@@ -102,8 +102,10 @@
             <div class="col-sm-12">
                 <div style="height:10rem;overflow:auto;border:1px solid #aaa;padding:10px;">
                     <div id="news-main">
-                        <h3 id="section-1">2019.05.26</h3> 
+                        <h3 id="section-1">2019.06.10</h3> 
                         <small class="text-danger">NEW!</small>
+                        <p style="height:100">LIBRARYに鎌倉の写真を追加しました。</p>
+                        <h3 id="section-1">2019.05.26</h3> 
                         <p style="height:100">LIBRARYに秩父の写真を追加しました。</p>
                         <h3 id="section-1">2019.05.23</h3> 
                         <p style="height:100">HOMEにNEWS欄を作成しました。(これ)</p>
