--- a/20190511.html
+++ b/20190511.html
@@ -10,7 +10,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@biophyshock" />
     <meta property="og:url" content="https://tomoeasagami.github.io/tomoegaro/20190511.html" />
-    <meta property="og:title" content="トモヱ画廊　トップページ" />
+    <meta property="og:title" content="20190511" />
     <meta property="og:description" content="浅上巴のホームページです。たまに写真を載せます。" />
     <meta property="og:image" content="https://tomoeasagami.github.io/tomoegaro/images/tenran.JPG" />
 
