--- a/library2.html
+++ b/library2.html
@@ -15,10 +15,13 @@
     <meta property="og:image" content="https://tomoeasagami.github.io/tomoegaro/images/tenran.JPG" />
 
     <link rel="stylesheet" href="./css/bootstrap.min.css" />
+    <link rel="stylesheet" href="./css/foo.css" />
 
     <script src="./js/jquery-3.4.1.js"></script>
     <script src="./js/popper.min.js"></script>
     <script src="./js/bootstrap.min.js"></script>
+    <script src="./js/jquery.pagination.js"></script>
+    <script src="./js/setpagination.js"></script>
     <script>
         $(function () {
             $('#news-main').scrollspy({ offset: $(window).height() / 2 });
@@ -72,58 +75,61 @@
             </div>
             <div class="col-md-4 py-2 bg-light text-info text-center border-left border-right">LIBRARY</div>
         </div>
-
-        <div class="row">
-            <div class="alpha col-sm-8">
-                <br>
-                <a href="./20190601.html" role="button">
-                    <img class="d-block w-100" src="./images/kamakura.png">
-                </a>
-            </div>
-        </div>
-        <div class="row">
-            <div class="alpha col-sm-8">
-                <br>
-                <a href="./20190525.html" role="button">
-                    <img class="d-block w-100" src="./images/chichibu.png">
-                </a>
-            </div>
-        </div>
-        <div class="row">
-            <div class="alpha col-sm-8">
-                <br>
-                <a href="./20190511.html" role="button">
-                    <img class="d-block w-100" src="./images/gibo.png">
-                </a>
-            </div>
-        </div>
-        <div class="row">
-            <div class="alpha col-sm-8">
-                <br>
-                <a href="./20190501.html" role="button">
-                    <img class="d-block w-100" src="./images/kozushima.png">
-                </a>
-            </div>
-        </div>
-        <div class="row">
-            <div class="alpha col-sm-8">
-                <br>
-                <a href="./20190420.html" role="button">
-                    <img class="d-block w-100" src="./images/hanno.png">
-                </a>
-            </div>
-        </div>
-        <div class="row">
-            <div class="alpha col-sm-8">
-                <br>
-                <a href="./20190413.html" role="button">
-                    <img class="d-block w-100" src="./images/kofu.png">
-                </a>
-            </div>
-        </div>
-
     </div>
-    <br>
+    <div class="container-fluid">
+        <div class="items">
+            <div class="row item">
+                <div class="alpha col-sm-8">
+                    <br>
+                    <a href="./20190601.html" role="button">
+                        <img class="d-block w-100" src="./images/kamakura.png">
+                    </a>
+                </div>
+            </div>
+            <div class="row item">
+                <div class="alpha col-sm-8">
+                    <br>
+                    <a href="./20190525.html" role="button">
+                        <img class="d-block w-100" src="./images/chichibu.png">
+                    </a>
+                </div>
+            </div>
+            <div class="row item">
+                <div class="alpha col-sm-8">
+                    <br>
+                    <a href="./20190511.html" role="button">
+                        <img class="d-block w-100" src="./images/gibo.png">
+                    </a>
+                </div>
+            </div>
+            <div class="row item">
+                <div class="alpha col-sm-8">
+                    <br>
+                    <a href="./20190501.html" role="button">
+                        <img class="d-block w-100" src="./images/kozushima.png">
+                    </a>
+                </div>
+            </div>
+            <div class="row item">
+                <div class="alpha col-sm-8">
+                    <br>
+                    <a href="./20190420.html" role="button">
+                        <img class="d-block w-100" src="./images/hanno.png">
+                    </a>
+                </div>
+            </div>
+            <div class="row item">
+                <div class="alpha col-sm-8">
+                    <br>
+                    <a href="./20190413.html" role="button">
+                        <img class="d-block w-100" src="./images/kofu.png">
+                    </a>
+                </div>
+            </div>
+            <br>
+        </div>
+    </div>
+
     <br>
 
     <footer>
