--- a/index.html
+++ b/index.html
@@ -108,6 +108,9 @@
             <div class="col-sm-12">
                 <div style="height:10rem;overflow:auto;border:1px solid #aaa;padding:10px;">
                     <div id="news-main">
+                        <h3 id="section-1">2019.09.03</h3>
+                        <small class="text-danger">NEW!</small>
+                        <p style="height:100">フォトギャラリーにページネーション機能を実装しました。</p>
                         <h3 id="section-1">2019.08.28</h3>
                         <small class="text-danger">NEW!</small>
                         <p style="height:100">ホームページのデザインを一新しました！</p>
