--- a/index.html
+++ b/index.html
@@ -109,10 +109,12 @@
                 <div style="height:10rem;overflow:auto;border:1px solid #aaa;padding:10px;">
                     <div id="news-main">
                         <h3 id="section-1">2019.09.03</h3>
-                        <small class="text-danger">NEW!</small>
+                        <!-- <small class="text-danger">NEW!</small> -->
+                        <span class="badge badge-danger">NEW!</span>
                         <p style="height:100">フォトギャラリーにページネーション機能を実装しました。</p>
                         <h3 id="section-1">2019.08.28</h3>
-                        <small class="text-danger">NEW!</small>
+                        <!-- <small class="text-danger">NEW!</small> -->
+                        <span class="badge badge-danger">NEW!</span>
                         <p style="height:100">ホームページのデザインを一新しました！</p>
                         <h3 id="section-1">2019.06.10</h3>
                         <p style="height:100">LIBRARYに鎌倉の写真を追加しました。</p>
