--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </div>
             <div class="col-md-4 py-2 bg-light text-info text-center border-left border-right">
                 <a href="./library2.html" role="button">
-                    LIBRARY
+                    OTAZUNE-おたずね-
                 </a>
             </div>
         </div>
@@ -108,13 +108,15 @@
             <div class="col-sm-12">
                 <div style="height:10rem;overflow:auto;border:1px solid #aaa;padding:10px;">
                     <div id="news-main">
-                        <h3 id="section-1">2019.09.03</h3>
+                        <h3 id="section-1">2019.10.22</h3>
                         <!-- <small class="text-danger">NEW!</small> -->
                         <span class="badge badge-danger">NEW!</span>
+                        <p style="height:100">OTAZUNE-おたずね-更新 2019.08.12 富戸</p>
+                        <h3 id="section-1">2019.09.03</h3>
+                        <!-- <small class="text-danger">NEW!</small> -->
                         <p style="height:100">フォトギャラリーにページネーション機能を実装しました。</p>
                         <h3 id="section-1">2019.08.28</h3>
                         <!-- <small class="text-danger">NEW!</small> -->
-                        <span class="badge badge-danger">NEW!</span>
                         <p style="height:100">ホームページのデザインを一新しました！</p>
                         <h3 id="section-1">2019.06.10</h3>
                         <p style="height:100">LIBRARYに鎌倉の写真を追加しました。</p>
