--- a/library2.html
+++ b/library2.html
@@ -73,7 +73,7 @@
                     ABOUT
                 </a>
             </div>
-            <div class="col-md-4 py-2 bg-light text-info text-center border-left border-right">LIBRARY</div>
+            <div class="col-md-4 py-2 bg-light text-info text-center border-left border-right">OTAZUNE-おたずね-</div>
         </div>
     </div>
     <div class="container-fluid">
@@ -81,53 +81,60 @@
             <div class="row item">
                 <div class="alpha col-sm-8">
                     <br>
-                    <a href="./20190601.html" role="button">
-                        <img class="d-block w-100" src="./images/kamakura.png">
+                    <a href="./20190812.html" role="button">
+                        <img class="d-block w-100" src="./images/futo.png">
                     </a>
                 </div>
             </div>
-            <div class="row item">
-                <div class="alpha col-sm-8">
-                    <br>
-                    <a href="./20190525.html" role="button">
-                        <img class="d-block w-100" src="./images/chichibu.png">
-                    </a>
-                </div>
+            <div class="alpha col-sm-8">
+                <br>
+                <a href="./20190601.html" role="button">
+                    <img class="d-block w-100" src="./images/kamakura.png">
+                </a>
             </div>
-            <div class="row item">
-                <div class="alpha col-sm-8">
-                    <br>
-                    <a href="./20190511.html" role="button">
-                        <img class="d-block w-100" src="./images/gibo.png">
-                    </a>
-                </div>
-            </div>
-            <div class="row item">
-                <div class="alpha col-sm-8">
-                    <br>
-                    <a href="./20190501.html" role="button">
-                        <img class="d-block w-100" src="./images/kozushima.png">
-                    </a>
-                </div>
-            </div>
-            <div class="row item">
-                <div class="alpha col-sm-8">
-                    <br>
-                    <a href="./20190420.html" role="button">
-                        <img class="d-block w-100" src="./images/hanno.png">
-                    </a>
-                </div>
-            </div>
-            <div class="row item">
-                <div class="alpha col-sm-8">
-                    <br>
-                    <a href="./20190413.html" role="button">
-                        <img class="d-block w-100" src="./images/kofu.png">
-                    </a>
-                </div>
-            </div>
-            <br>
         </div>
+        <div class="row item">
+            <div class="alpha col-sm-8">
+                <br>
+                <a href="./20190525.html" role="button">
+                    <img class="d-block w-100" src="./images/chichibu.png">
+                </a>
+            </div>
+        </div>
+        <div class="row item">
+            <div class="alpha col-sm-8">
+                <br>
+                <a href="./20190511.html" role="button">
+                    <img class="d-block w-100" src="./images/gibo.png">
+                </a>
+            </div>
+        </div>
+        <div class="row item">
+            <div class="alpha col-sm-8">
+                <br>
+                <a href="./20190501.html" role="button">
+                    <img class="d-block w-100" src="./images/kozushima.png">
+                </a>
+            </div>
+        </div>
+        <div class="row item">
+            <div class="alpha col-sm-8">
+                <br>
+                <a href="./20190420.html" role="button">
+                    <img class="d-block w-100" src="./images/hanno.png">
+                </a>
+            </div>
+        </div>
+        <div class="row item">
+            <div class="alpha col-sm-8">
+                <br>
+                <a href="./20190413.html" role="button">
+                    <img class="d-block w-100" src="./images/kofu.png">
+                </a>
+            </div>
+        </div>
+        <br>
+    </div>
     </div>
 
     <br>
