--- a/20190413.html
+++ b/20190413.html
@@ -68,7 +68,7 @@
             </div>
             <div class="col-md-4 py-2 bg-light text-info text-centerborder-left border-right">
                 <a href="./library2.html" role="button">
-                    LIBRARY
+                    OTAZUNE-おたずね-
                 </a>
             </div>
         </div>
