--- a/aboutus.html
+++ b/aboutus.html
@@ -40,7 +40,7 @@
             <div class="col-md-4 py-2 bg-light text-info text-center border-left border-right">ABOUT</div>
             <div class="col-md-4 py-2 bg-light text-info text-center border-left border-right">
                 <a href="./library2.html" role="button">
-                    LIBRARY
+                    OTAZUNE-おたずね-
                 </a>
             </div>
         </div>
