ページング ミス修正

--- a/library2.html
+++ b/library2.html
@@ -86,6 +86,7 @@
                     </a>
                 </div>
             </div>
+	<div class="row item">
             <div class="alpha col-sm-8">
                 <br>
                 <a href="./20190601.html" role="button">
